# C1109-NN

./: CMakeLists.txt  csv_handler.cc  csv_handler.hh  dataset.cc  dataset.hh  definitions.hh  headers.hh  layers.cc  layers.hh  main.cc  network.cc  network.hh  perceptrons.cc  perceptrons.hh
